2007-12-19  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Fix the race condition in the render
	quick code.

2007-12-18  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/autoopttool.[h,cpp]: Add support for molecular
	dynamics. This should probably move to it's own tool, where you can
	record and play trajectories.

2007-12-17  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/color.[h, cpp]: New method setToSelectionColor
	to allow overloading and customization of the selection color in
	render engines.

	* libavogadro/src/engines/*.cpp: Use it.

	* libavogadro/src/tools/*.cpp: Add Navigate::zoom() to wheel
	operations for all tools.

2007-12-15  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/ringengine.*: Added support for colouring
	the rings based upon the number of ring members.

2007-12-15  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/tools/autoopttool.[h,cpp]: Add support for
	OBPluginList to dynamically get list of force field types.

	* avogadro/src/extensions/forcefieldextension*: As above.

	* libavogadro/src/engines/hbondengine.cpp: Add support for
	stippled lines.

2007-12-15  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/engines/hbondengine.[h,cpp],
	libavogadro/src/engines/hbondsettingswidget.ui: Added hydrogen bond
	engine. I was planning on drawing stippled lines, but it seems that
	this isn't implemented yet.

2007-12-13  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/autoopttool.[h,cpp]: Added Numerical or
	Analytical gradients option. (was this left out for a reason? feel
	free to remove if this is the case)

	* avogadro/src/extensions/prop*.[h,cpp]: Added angles and torsions.

2007-12-13  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Invalidate the cache after mouse up.

	* libavogadro/src/engines/labelengine.*: Don't draw labels when using