@@ -3,6 +3,8 @@
 	* libavogadro/src/glwidget.cpp: Fix the race condition in the render
 	quick code.
 
+	* libavogadro/src/camera.*: Added a copy constructor.
+
 2007-12-18  Tim Vandermeersch  <tim.vandermeersch@gmail.com>
 
 	* libavogadro/src/tools/autoopttool.[h,cpp]: Add support for molecular
